<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:spinner="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/SettingTitle"
            android:text="@string/height_settings_units_title"/>

        <TextView
            style="@style/SettingDescription"
            android:text="@string/height_settings_units_description"/>

        <RadioGroup style="@style/SettingRadioGroup">

            <RadioButton
                android:id="@+id/rbHeightSettingInches"
                style="@style/SettingRadioButton"
                android:text="@string/length_unit_inches"/>

            <RadioButton
                android:id="@+id/rbHeightSettingFeet"
                style="@style/SettingRadioButton"
                android:text="@string/length_unit_feet"/>

            <RadioButton
                android:id="@+id/rbHeightSettingMetres"
                style="@style/SettingRadioButton"
                android:text="@string/length_unit_metres"/>

            <RadioButton
                android:id="@+id/rbHeightSettingCentimetres"
                style="@style/SettingRadioButton"
                android:text="@string/length_unit_centimetres"/>
        </RadioGroup>

        <TextView
            style="@style/SettingTitle"
            android:text="@string/height_settings_height_title"/>

        <TextView
            style="@style/SettingDescription"
            android:text="@string/height_settings_height_description"/>

        <com.pigdogbay.lib.usercontrols.CustomNumberPicker
            android:id="@+id/HeightSettingsPicker"
            style="@style/NumberPicker"
            spinner:minusButtonColor="#000"
            spinner:plusButtonColor="#000"
            />
    </LinearLayout>

</ScrollView>