<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/HomeHorizontalCentre"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:text="" />

        <Button
            android:id="@+id/HomeBtnEntry"
            style="@style/HomeButton"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/HomeHorizontalCentre"
            android:drawableTop="@drawable/tape_measure_add"
            android:background="#00000000"
            android:text="@string/main_btn_enter" />

        <Button
            android:id="@+id/HomeBtnEditor"
            style="@style/HomeButton"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/HomeHorizontalCentre"
            android:drawableTop="@drawable/index_edit"
            android:background="#00000000"
            android:text="@string/main_btn_edit" />

        <Button
            android:id="@+id/HomeBtnChart"
            style="@style/HomeButton"
            android:layout_below="@id/HomeBtnEntry"
            android:layout_toLeftOf="@id/HomeHorizontalCentre"
            android:drawableTop="@drawable/line_chart"
            android:background="#00000000"
            android:text="@string/main_btn_chart" />

        <Button
            android:id="@+id/HomeBtnReport"
            style="@style/HomeButton"
            android:layout_below="@id/HomeBtnEntry"
            android:layout_toRightOf="@id/HomeHorizontalCentre"
            android:drawableTop="@drawable/presentation_chart"
            android:background="#00000000"
            android:text="@string/main_btn_report" />

        <Button
            android:id="@+id/HomeBtnSettings"
            style="@style/HomeButton"
            android:layout_below="@id/HomeBtnChart"
            android:layout_toLeftOf="@id/HomeHorizontalCentre"
            android:drawableTop="@drawable/wrench"
            android:background="#00000000"
            android:text="@string/main_btn_settings" />

        <Button
            android:id="@+id/HomeBtnSync"
            style="@style/HomeButton"
            android:layout_below="@id/HomeBtnReport"
            android:layout_toRightOf="@id/HomeHorizontalCentre"
            android:drawableTop="@drawable/refresh"
            android:background="#00000000"
            android:text="@string/main_btn_sync" />
    </RelativeLayout>

</ScrollView>