<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".ConnectToDriveFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/connectStatus"
        android:text="@string/connect_status_not_connected"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:id="@+id/connectConnectBtn"
        android:theme="@style/MaterialButton"
        style="@style/DriveButton"
        android:text="@string/connect_connect_button"/>
    <TextView
        android:id="@+id/connectInformationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/connect_help_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />


</LinearLayout>
