<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.pigdogbay.weighttrackerpro.UpgradeFragment">

    <TextView
        android:id="@+id/upgradeStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/connect_status_not_connected"
        />

    <Button
        android:id="@+id/upgradeConnectBtn"
        style="@style/DriveButton"
        android:text="@string/connect_connect_button"
        android:theme="@style/MaterialButton"/>

    <TextView
        android:id="@+id/upgradeInformationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/upgrade_help_text"
        android:textAppearance="?android:attr/textAppearanceMedium"/>


</LinearLayout>
